Fixed overflow-x

--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -30,6 +30,7 @@ html {
   scroll-behavior: smooth;
 }
 
+html,
 body {
   overflow-x: hidden;
 }
@@ -39,7 +40,6 @@ section {
 }
 
 img {
-  width: 100%;
   max-width: 100%;
 }
 
